--- a/app/src/main/res/layout/activity_client.xml
+++ b/app/src/main/res/layout/activity_client.xml
@@ -1,21 +1,138 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/main"
+    android:orientation="vertical"
+    android:layout_gravity="center"
+    android:background="@drawable/bg1"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".client">
 
-    <TextView
-        android:id="@+id/textView"
-        android:layout_width="wrap_content"
+    <LinearLayout
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Client"
-        android:textSize="50sp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.522" />
-</androidx.constraintlayout.widget.ConstraintLayout>
+        android:orientation="vertical"
+        android:gravity="center">
+
+            <ImageView
+                android:id="@+id/arrowback"
+                android:layout_width="40sp"
+                android:layout_height="40sp"
+                android:layout_marginLeft="10sp"
+                android:layout_marginTop="10sp"
+                android:src="@drawable/baseline_arrow_back_24"
+                android:layout_gravity="center_vertical"/>
+
+        <TextView
+            android:id="@+id/welcome"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:fontFamily="sans-serif-smallcaps"
+            android:gravity="center"
+            android:padding="20dp"
+            android:text="Welcome"
+            android:textColor="@color/white"
+            android:textSize="60sp"
+            android:textStyle="bold" />
+
+        <androidx.cardview.widget.CardView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:padding="10dp"
+            android:layout_margin="10dp"
+            app:cardCornerRadius="20dp"
+            app:cardBackgroundColor="#85FFFFFF"
+            app:cardElevation="20dp">
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:gravity="center"
+                android:layout_gravity="center"
+                android:orientation="vertical">
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="30sp"
+                    android:layout_gravity="left"
+                    android:layout_marginLeft="35sp"
+                    android:text="Give orders"
+                    android:textColor="@color/black"
+                    android:textStyle="bold"
+                    android:textSize="40sp" />
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="8sp"
+                    android:layout_gravity="left"
+                    android:layout_marginLeft="35sp"
+                    android:text="Please fill the details"
+                    android:textColor="@color/black"
+                    android:textSize="15sp" />
+
+                <EditText
+                    android:id="@+id/workassign"
+                    android:layout_width="300sp"
+                    android:layout_height="wrap_content"
+                    android:background="@drawable/edittextbackground"
+                    android:hint="Please give the details of the work"
+                    android:inputType="textMultiLine"
+                    android:paddingLeft="15sp"
+                    android:textSize="20sp"
+                    android:layout_gravity="center"
+                    android:layout_marginTop="20sp" />
+
+                <TextView
+                    android:id="@+id/order_date"
+                    android:layout_width="300sp"
+                    android:layout_height="40sp"
+                    android:background="@drawable/edittextbackground"
+                    android:hint="Deadline for order"
+                    android:paddingLeft="15sp"
+                    android:drawableRight="@drawable/baseline_calendar_month_24"
+                    android:paddingRight="10sp"
+                    android:gravity="left"
+                    android:paddingTop="5sp"
+                    android:textSize="20sp"
+                    android:layout_gravity="center"
+                    android:layout_marginTop="20sp" />
+
+                <Spinner
+                    android:id="@+id/priority"
+                    android:layout_width="300sp"
+                    android:layout_height="40sp"
+                    android:background="@drawable/spinnerbackground"
+                    android:layout_gravity="center"
+                    android:layout_marginTop="20sp"
+                    android:popupBackground="@color/white" />
+
+                <FrameLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content">
+                    <Button
+                        android:id="@+id/Submit"
+                        android:layout_width="300sp"
+                        android:layout_height="50sp"
+                        android:layout_gravity="center"
+                        android:layout_margin="30sp"
+                        android:layout_marginLeft="50sp"
+                        android:background="@drawable/btnbackground"
+                        android:text="Submit"
+                        android:textColor="#FAF7F7"
+                        android:textStyle="bold" />
+                    <ProgressBar
+                        android:id="@+id/progressbarlogin"
+                        android:layout_width="35sp"
+                        android:layout_height="35sp"
+                        android:layout_gravity="center"
+                        android:visibility="gone" />
+                </FrameLayout>
+            </LinearLayout>
+        </androidx.cardview.widget.CardView>
+    </LinearLayout>
+</ScrollView>
