--- a/app/src/main/res/layout/activity_clients_order.xml
+++ b/app/src/main/res/layout/activity_clients_order.xml
@@ -2,34 +2,39 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/main"
     android:orientation="vertical"
-    android:layout_gravity="center"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".admin">
+    tools:context=".clients_order">
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="40sp"
+        android:layout_height="wrap_content"
         android:layout_marginTop="20sp"
-        >
+        android:orientation="horizontal">
+
         <TextView
-            android:layout_width="match_parent"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:text="Orders List"
             android:textSize="30sp"
             android:textColor="@color/black"
-            android:gravity="center">
+            android:gravity="center"
+            android:layout_weight="1"/>
 
-        </TextView>
-
+        <ImageView
+            android:id="@+id/add"
+            android:layout_width="40sp"
+            android:layout_height="40sp"
+            android:layout_marginRight="10sp"
+            android:src="@drawable/baseline_add_circle_24"
+            android:layout_gravity="center_vertical"/>
     </LinearLayout>
+
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/order_recycler_view"
         android:layout_marginTop="20sp"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        />
+        android:layout_height="match_parent"/>
 
 </LinearLayout>
