--- a/app/src/main/res/layout/activity_client.xml
+++ b/app/src/main/res/layout/activity_client.xml
@@ -5,115 +5,104 @@
     android:id="@+id/main"
     android:orientation="vertical"
     android:layout_gravity="center"
-    android:background="@drawable/bg1"
+    android:background="@drawable/bg"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".client">
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="vertical"
-        android:gravity="center">
+        android:layout_height="match_parent"
+        android:orientation="vertical">
+<LinearLayout
+    android:layout_width="match_parent"
+    android:layout_height="match_parent">
+        <ImageView
+            android:id="@+id/arrowback"
+            android:layout_width="40sp"
+            android:layout_height="40sp"
+            android:layout_marginLeft="10sp"
+            android:layout_marginTop="10sp"
+            android:src="@drawable/baseline_arrow_back_24"
+            android:layout_gravity="center_vertical"/>
 
-            <ImageView
-                android:id="@+id/arrowback"
-                android:layout_width="40sp"
-                android:layout_height="40sp"
-                android:layout_marginLeft="10sp"
-                android:layout_marginTop="10sp"
-                android:src="@drawable/baseline_arrow_back_24"
-                android:layout_gravity="center_vertical"/>
+</LinearLayout>
 
-        <TextView
-            android:id="@+id/welcome"
+        <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:fontFamily="sans-serif-smallcaps"
-            android:gravity="center"
-            android:padding="20dp"
-            android:text="Welcome"
-            android:textColor="@color/white"
-            android:textSize="60sp"
-            android:textStyle="bold" />
-
-        <androidx.cardview.widget.CardView
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="550dp"
             android:layout_gravity="center"
-            android:padding="10dp"
-            android:layout_margin="10dp"
-            app:cardCornerRadius="20dp"
-            app:cardBackgroundColor="#85FFFFFF"
-            app:cardElevation="20dp">
+            android:gravity="center">
 
             <LinearLayout
                 android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:gravity="center"
+                android:layout_height="479dp"
                 android:layout_gravity="center"
+                android:gravity="center"
                 android:orientation="vertical">
 
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_marginTop="30sp"
                     android:layout_gravity="left"
                     android:layout_marginLeft="35sp"
+                    android:layout_marginTop="30sp"
                     android:text="Give orders"
-                    android:textColor="@color/black"
-                    android:textStyle="bold"
-                    android:textSize="40sp" />
+                    android:textColor="@color/white"
+                    android:textSize="40sp"
+                    android:textStyle="bold" />
 
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_marginTop="8sp"
                     android:layout_gravity="left"
                     android:layout_marginLeft="35sp"
+                    android:layout_marginTop="8sp"
                     android:text="Please fill the details"
-                    android:textColor="@color/black"
+                    android:textColor="@color/white"
                     android:textSize="15sp" />
 
                 <EditText
                     android:id="@+id/workassign"
                     android:layout_width="300sp"
                     android:layout_height="wrap_content"
-                    android:background="@drawable/edittextbackground"
-                    android:hint="Please give the details of the work"
-                    android:inputType="textMultiLine"
-                    android:paddingLeft="15sp"
-                    android:textSize="20sp"
                     android:layout_gravity="center"
-                    android:layout_marginTop="20sp" />
+                    android:layout_marginTop="20sp"
+                    android:background="@drawable/edittextbackground"
+                    android:hint="Details of the work"
+                    android:inputType="textMultiLine"
+                    android:padding="10dp"
+                    android:paddingLeft="15sp"
+                    android:textSize="20sp" />
 
                 <TextView
                     android:id="@+id/order_date"
                     android:layout_width="300sp"
                     android:layout_height="40sp"
+                    android:layout_gravity="center"
+                    android:layout_marginTop="20sp"
                     android:background="@drawable/edittextbackground"
+                    android:drawableRight="@drawable/baseline_calendar_month_24"
+                    android:gravity="left"
                     android:hint="Deadline for order"
                     android:paddingLeft="15sp"
-                    android:drawableRight="@drawable/baseline_calendar_month_24"
-                    android:paddingRight="10sp"
-                    android:gravity="left"
                     android:paddingTop="5sp"
-                    android:textSize="20sp"
-                    android:layout_gravity="center"
-                    android:layout_marginTop="20sp" />
+                    android:paddingRight="10sp"
+                    android:textSize="20sp" />
 
                 <Spinner
                     android:id="@+id/priority"
                     android:layout_width="300sp"
                     android:layout_height="40sp"
-                    android:background="@drawable/spinnerbackground"
                     android:layout_gravity="center"
                     android:layout_marginTop="20sp"
+                    android:background="@drawable/spinnerbackground"
                     android:popupBackground="@color/white" />
 
                 <FrameLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content">
+
                     <Button
                         android:id="@+id/Submit"
                         android:layout_width="300sp"
@@ -122,9 +111,11 @@
                         android:layout_margin="30sp"
                         android:layout_marginLeft="50sp"
                         android:background="@drawable/btnbackground"
+                        android:backgroundTint="@color/bg"
                         android:text="Submit"
                         android:textColor="#FAF7F7"
                         android:textStyle="bold" />
+
                     <ProgressBar
                         android:id="@+id/progressbarlogin"
                         android:layout_width="35sp"
@@ -133,6 +124,7 @@
                         android:visibility="gone" />
                 </FrameLayout>
             </LinearLayout>
-        </androidx.cardview.widget.CardView>
+
+        </LinearLayout>
     </LinearLayout>
 </ScrollView>
