--- a/app/src/main/res/layout/activity_clients_order.xml
+++ b/app/src/main/res/layout/activity_clients_order.xml
@@ -1,11 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:orientation="vertical"
+    android:background="@drawable/bg"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".clients_order">
+<LinearLayout
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    android:orientation="vertical">
+
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -16,25 +22,33 @@
         <TextView
             android:layout_width="0dp"
             android:layout_height="wrap_content"
+            android:layout_marginTop="20dp"
             android:text="Orders List"
             android:textSize="30sp"
             android:textColor="@color/black"
             android:gravity="center"
             android:layout_weight="1"/>
 
-        <ImageView
-            android:id="@+id/add"
-            android:layout_width="40sp"
-            android:layout_height="40sp"
-            android:layout_marginRight="10sp"
-            android:src="@drawable/baseline_add_circle_24"
-            android:layout_gravity="center_vertical"/>
     </LinearLayout>
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/order_recycler_view"
-        android:layout_marginTop="20sp"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"/>
+        android:layout_height="wrap_content"
+        android:layout_marginTop="20sp"/>
 
 </LinearLayout>
+
+        <com.google.android.material.floatingactionbutton.FloatingActionButton
+            android:id="@+id/add"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="end|bottom"
+            android:layout_marginBottom="45dp"
+            android:layout_marginEnd="25dp"
+            android:clickable="true"
+            app:srcCompat="@drawable/add_btn_foreground"
+            android:backgroundTint="@color/bg"/>
+
+
+</androidx.coordinatorlayout.widget.CoordinatorLayout>
