--- a/app/src/main/res/layout/client_order_list.xml
+++ b/app/src/main/res/layout/client_order_list.xml
@@ -6,14 +6,14 @@
     android:layout_margin="20sp"
     android:orientation="horizontal"
     app:cardCornerRadius="8dp"
-    app:cardElevation="4dp">
+    app:cardElevation="30dp">
 
 
     <FrameLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:padding="5sp"
-        android:background="@drawable/card_background">
+        >
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
@@ -23,6 +23,7 @@
                 android:id="@+id/order_details_text"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:padding="10dp"
                 android:textSize="16sp"
                 android:textColor="@android:color/black" />
 
@@ -41,6 +42,8 @@
 
                 <TextView
                     android:id="@+id/order_status_text"
+                    android:textStyle="bold"
+                    android:textAllCaps="true"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:textSize="14sp"
