--- a/app/src/main/res/layout/activity_clients_order.xml
+++ b/app/src/main/res/layout/activity_clients_order.xml
@@ -25,9 +25,11 @@
             android:layout_marginTop="20dp"
             android:text="Orders List"
             android:textSize="30sp"
-            android:textColor="@color/black"
+            android:textColor="@color/white"
             android:gravity="center"
             android:layout_weight="1"/>
+
+
 
     </LinearLayout>
 
