--- a/app/src/main/res/layout/activity_worker.xml
+++ b/app/src/main/res/layout/activity_worker.xml
@@ -3,6 +3,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
+    android:background="@drawable/bg"
     android:padding="16dp">
 
     <LinearLayout
@@ -14,7 +15,7 @@
             android:layout_height="wrap_content"
             android:text="Orders List"
             android:textSize="30sp"
-            android:textColor="@color/black"
+            android:textColor="@color/white"
             android:gravity="center">
 
         </TextView>
